--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "build": "tsc && vite build",
     "format": "prettier --write --parser typescript '**/*.{ts,tsx}'",
     "lint": "eslint . --ext .ts,.tsx --ignore-path .gitignore --fix",
+    "prepare": "npm run build",
     "test": "vitest run",
     "test-watch": "vitest",
     "test:ui": "vitest --ui",
