--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ukiome-ui",
-  "version": "1.0.3",
+  "name": "@ukiome/ukiome-ui",
+  "version": "1.0.4",
   "description": "",
   "author": "",
   "license": "ISC",
